@@ -5,10 +5,7 @@ import com.github.tartaricacid.touhoulittlemaid.api.client.gui.ITooltipButton;
 import com.github.tartaricacid.touhoulittlemaid.api.task.IMaidTask;
 import com.github.tartaricacid.touhoulittlemaid.client.gui.entity.model.MaidModelGui;
 import com.github.tartaricacid.touhoulittlemaid.client.gui.sound.MaidSoundPackGui;
-import com.github.tartaricacid.touhoulittlemaid.client.gui.widget.button.MaidDownloadButton;
-import com.github.tartaricacid.touhoulittlemaid.client.gui.widget.button.MaidTabButton;
-import com.github.tartaricacid.touhoulittlemaid.client.gui.widget.button.ScheduleButton;
-import com.github.tartaricacid.touhoulittlemaid.client.gui.widget.button.TaskButton;
+import com.github.tartaricacid.touhoulittlemaid.client.gui.widget.button.*;
 import com.github.tartaricacid.touhoulittlemaid.client.resource.CustomPackLoader;
 import com.github.tartaricacid.touhoulittlemaid.compat.ipn.SortButtonScreen;
 import com.github.tartaricacid.touhoulittlemaid.entity.ai.brain.MaidGomokuAI;
@@ -16,20 +13,16 @@ import com.github.tartaricacid.touhoulittlemaid.entity.favorability.Favorability
 import com.github.tartaricacid.touhoulittlemaid.entity.passive.EntityMaid;
 import com.github.tartaricacid.touhoulittlemaid.entity.task.TaskManager;
 import com.github.tartaricacid.touhoulittlemaid.inventory.container.AbstractMaidContainer;
-import com.github.tartaricacid.touhoulittlemaid.network.NetworkHandler;
-import com.github.tartaricacid.touhoulittlemaid.network.message.MaidConfigMessage;
-import com.github.tartaricacid.touhoulittlemaid.network.message.MaidTaskMessage;
-import com.github.tartaricacid.touhoulittlemaid.network.message.RequestEffectMessage;
-import com.github.tartaricacid.touhoulittlemaid.network.message.SendEffectMessage;
+import com.github.tartaricacid.touhoulittlemaid.network.message.MaidConfigPackage;
+import com.github.tartaricacid.touhoulittlemaid.network.message.MaidTaskPackage;
+import com.github.tartaricacid.touhoulittlemaid.network.message.RequestEffectPackage;
+import com.github.tartaricacid.touhoulittlemaid.network.message.SendEffectPackage;
 import com.github.tartaricacid.touhoulittlemaid.util.ParseI18n;
 import com.google.common.collect.Lists;
-import com.mojang.blaze3d.systems.RenderSystem;
 import com.mojang.datafixers.util.Pair;
 import net.minecraft.ChatFormatting;
 import net.minecraft.SharedConstants;
 import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.client.gui.components.ImageButton;
-import net.minecraft.client.gui.components.StateSwitchingButton;
 import net.minecraft.client.gui.screens.inventory.AbstractContainerScreen;
 import net.minecraft.client.gui.screens.inventory.InventoryScreen;
 import net.minecraft.client.resources.language.I18n;
@@ -41,7 +34,8 @@ import net.minecraft.util.FormattedCharSequence;
 import net.minecraft.util.StringUtil;
 import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.entity.player.Inventory;
-import net.minecraftforge.fml.ModList;
+import net.neoforged.fml.ModList;
+import net.neoforged.neoforge.network.PacketDistributor;
 
 import javax.annotation.Nullable;
 import java.text.DecimalFormat;
@@ -52,25 +46,25 @@ import java.util.function.Predicate;
 import static com.github.tartaricacid.touhoulittlemaid.util.GuiTools.NO_ACTION;
 
 public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> extends AbstractContainerScreen<T> {
-    private static final ResourceLocation BG = new ResourceLocation(TouhouLittleMaid.MOD_ID, "textures/gui/maid_gui_main.png");
-    private static final ResourceLocation SIDE = new ResourceLocation(TouhouLittleMaid.MOD_ID, "textures/gui/maid_gui_side.png");
-    private static final ResourceLocation BUTTON = new ResourceLocation(TouhouLittleMaid.MOD_ID, "textures/gui/maid_gui_button.png");
-    private static final ResourceLocation TASK = new ResourceLocation(TouhouLittleMaid.MOD_ID, "textures/gui/maid_gui_task.png");
+    private static final ResourceLocation BG = ResourceLocation.fromNamespaceAndPath(TouhouLittleMaid.MOD_ID, "textures/gui/maid_gui_main.png");
+    private static final ResourceLocation SIDE = ResourceLocation.fromNamespaceAndPath(TouhouLittleMaid.MOD_ID, "textures/gui/maid_gui_side.png");
+    private static final ResourceLocation BUTTON = ResourceLocation.fromNamespaceAndPath(TouhouLittleMaid.MOD_ID, "textures/gui/maid_gui_button.png");
+    private static final ResourceLocation TASK = ResourceLocation.fromNamespaceAndPath(TouhouLittleMaid.MOD_ID, "textures/gui/maid_gui_task.png");
     private static final DecimalFormat DECIMAL_FORMAT = new DecimalFormat("00");
     private static final int TASK_COUNT_PER_PAGE = 12;
     private static int TASK_PAGE = 0;
     @Nullable
     private final EntityMaid maid;
-    private StateSwitchingButton home;
-    private StateSwitchingButton pick;
-    private StateSwitchingButton ride;
-    private ImageButton info;
-    private ImageButton skin;
-    private ImageButton sound;
-    private ImageButton pageDown;
-    private ImageButton pageUp;
-    private ImageButton pageClose;
-    private ImageButton taskSwitch;
+    private TouhouStateSwitchButton home;
+    private TouhouStateSwitchButton pick;
+    private TouhouStateSwitchButton ride;
+    private TouhouImageButton info;
+    private TouhouImageButton skin;
+    private TouhouImageButton sound;
+    private TouhouImageButton pageDown;
+    private TouhouImageButton pageUp;
+    private TouhouImageButton pageClose;
+    private TouhouImageButton taskSwitch;
     private MaidDownloadButton modelDownload;
     private ScheduleButton<T> scheduleButton;
     private boolean taskListOpen;
@@ -112,8 +106,8 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
         if (this.maid == null) {
             return;
         }
-        drawModInfo(graphics);
         super.render(graphics, mouseX, mouseY, partialTicks);
+        drawModInfo(graphics);
         this.drawEffectInfo(graphics);
         this.drawCurrentTaskText(graphics);
         this.renderTooltip(graphics, mouseX, mouseY);
@@ -133,23 +127,23 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
         if (taskListOpen) {
             return;
         }
-        List<SendEffectMessage.EffectData> effects = maid.getEffects();
+        List<SendEffectPackage.EffectData> effects = maid.getEffects();
         if (!effects.isEmpty()) {
             int yOffset = 5;
-            for (SendEffectMessage.EffectData effect : effects) {
-                MutableComponent text = Component.translatable(effect.descriptionId);
-                if (effect.amplifier >= 1 && effect.amplifier <= 9) {
-                    MutableComponent levelText = Component.translatable("enchantment.level." + (effect.amplifier + 1));
+            for (SendEffectPackage.EffectData effect : effects) {
+                MutableComponent text = Component.translatable(effect.descriptionId());
+                if (effect.amplifier() >= 1 && effect.amplifier() <= 9) {
+                    MutableComponent levelText = Component.translatable("enchantment.level." + (effect.amplifier() + 1));
                     text = text.append(CommonComponents.SPACE).append(levelText);
                 }
                 String duration;
-                if (effect.duration == -1) {
+                if (effect.duration() == -1) {
                     duration = I18n.get("effect.duration.infinite");
                 } else {
-                    duration = StringUtil.formatTickDuration(effect.duration);
+                    duration = StringUtil.formatTickDuration(effect.duration(), 20);
                 }
                 text = text.append(CommonComponents.SPACE).append(duration);
-                graphics.drawString(font, text, leftPos - font.width(text) - 3, topPos + yOffset + 5, getPotionColor(effect.category));
+                graphics.drawString(font, text, leftPos - font.width(text) - 3, topPos + yOffset + 5, getPotionColor(effect.category()));
                 yOffset += 10;
             }
         }
@@ -169,13 +163,11 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
 
     @Override
     protected void renderBg(GuiGraphics graphics, float partialTicks, int x, int y) {
-        graphics.pose().translate(0, 0, -100);
-        renderBackground(graphics);
         graphics.blit(BG, leftPos, topPos, 0, 0, imageWidth, imageHeight);
         SortButtonScreen.renderBackground(graphics, leftPos + 249, topPos + 166);
-        this.drawMaidCharacter(graphics, x, y);
         this.drawBaseInfoGui(graphics);
         this.drawTaskListBg(graphics);
+        this.drawMaidCharacter(graphics, x, y);
     }
 
     @Override
@@ -203,29 +195,29 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
     }
 
     private void addStateButton() {
-        skin = new ImageButton(leftPos + 62, topPos + 14, 9, 9, 72, 43, 10, BUTTON, (b) -> getMinecraft().setScreen(new MaidModelGui(maid)));
-        sound = new ImageButton(leftPos + 52, topPos + 14, 9, 9, 144, 43, 10, BUTTON, (b) -> getMinecraft().setScreen(new MaidSoundPackGui(maid)));
-        info = new ImageButton(leftPos + 8, topPos + 14, 9, 9, 72, 65, 10, BUTTON, NO_ACTION);
+        skin = new TouhouImageButton(leftPos + 62, topPos + 14, 9, 9, 72, 43, 10, BUTTON, (b) -> getMinecraft().setScreen(new MaidModelGui(maid)));
+        sound = new TouhouImageButton(leftPos + 52, topPos + 14, 9, 9, 144, 43, 10, BUTTON, (b) -> getMinecraft().setScreen(new MaidSoundPackGui(maid)));
+        info = new TouhouImageButton(leftPos + 8, topPos + 14, 9, 9, 72, 65, 10, BUTTON, NO_ACTION);
         this.addRenderableWidget(skin);
         this.addRenderableWidget(sound);
         this.addRenderableWidget(info);
     }
 
     private void addTaskControlButton() {
-        pageDown = new ImageButton(leftPos - 72, topPos + 9, 16, 13, 93, 0, 14, TASK, (b) -> {
+        pageDown = new TouhouImageButton(leftPos - 72, topPos + 9, 16, 13, 93, 0, 14, TASK, (b) -> {
             List<IMaidTask> tasks = TaskManager.getTaskIndex();
             if (TASK_PAGE * TASK_COUNT_PER_PAGE + TASK_COUNT_PER_PAGE < tasks.size()) {
                 TASK_PAGE++;
                 init();
             }
         });
-        pageUp = new ImageButton(leftPos - 89, topPos + 9, 16, 13, 110, 0, 14, TASK, (b) -> {
+        pageUp = new TouhouImageButton(leftPos - 89, topPos + 9, 16, 13, 110, 0, 14, TASK, (b) -> {
             if (TASK_PAGE > 0) {
                 TASK_PAGE--;
                 init();
             }
         });
-        pageClose = new ImageButton(leftPos - 19, topPos + 9, 13, 13, 127, 0, 14, TASK, (b) -> {
+        pageClose = new TouhouImageButton(leftPos - 19, topPos + 9, 13, 13, 127, 0, 14, TASK, (b) -> {
             taskListOpen = false;
             init();
         });
@@ -267,22 +259,24 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
 
     // 用于开放切换任务时对当前 GUI 的操作
     protected void taskButtonPressed(IMaidTask maidTask, boolean enable) {
-        NetworkHandler.CHANNEL.sendToServer(new MaidTaskMessage(maid.getId(), maidTask.getUid()));
+        if (maid != null) {
+            PacketDistributor.sendToServer(new MaidTaskPackage(maid.getId(), maidTask.getUid()));
+        }
     }
 
     private List<Component> getTaskTooltips(IMaidTask maidTask) {
         List<Component> desc = ParseI18n.keysToTrans(maidTask.getDescription(maid), ChatFormatting.GRAY);
         if (!desc.isEmpty()) {
-            desc.add(0, Component.translatable("task.touhou_little_maid.desc.title").withStyle(ChatFormatting.GOLD));
+            desc.addFirst(Component.translatable("task.touhou_little_maid.desc.title").withStyle(ChatFormatting.GOLD));
         }
         if (!maidTask.isEnable(maid)) {
             List<Pair<String, Predicate<EntityMaid>>> enableConditionDesc = maidTask.getEnableConditionDesc(maid);
             // 强制显示启用条件提示
-            desc.add(Component.literal("\u0020"));
+            desc.add(Component.literal(" "));
             desc.add(Component.translatable("task.touhou_little_maid.desc.enable_condition").withStyle(ChatFormatting.GOLD));
 
             for (Pair<String, Predicate<EntityMaid>> line : enableConditionDesc) {
-                MutableComponent prefix = Component.literal("-\u0020");
+                MutableComponent prefix = Component.literal("- ");
                 String key = String.format("task.%s.%s.enable_condition.%s", maidTask.getUid().getNamespace(), maidTask.getUid().getPath(), line.getFirst());
                 MutableComponent condition = Component.translatable(key);
                 if (line.getSecond().test(maid)) {
@@ -295,11 +289,11 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
         }
         List<Pair<String, Predicate<EntityMaid>>> conditions = maidTask.getConditionDescription(maid);
         if (!conditions.isEmpty()) {
-            desc.add(Component.literal("\u0020"));
+            desc.add(Component.literal(" "));
             desc.add(Component.translatable("task.touhou_little_maid.desc.condition").withStyle(ChatFormatting.GOLD));
         }
         for (Pair<String, Predicate<EntityMaid>> line : conditions) {
-            MutableComponent prefix = Component.literal("-\u0020");
+            MutableComponent prefix = Component.literal("- ");
             String key = String.format("task.%s.%s.condition.%s", maidTask.getUid().getNamespace(), maidTask.getUid().getPath(), line.getFirst());
             MutableComponent condition = Component.translatable(key);
             if (line.getSecond().test(maid)) {
@@ -330,7 +324,7 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
     }
 
     private void addTaskSwitchButton() {
-        taskSwitch = new ImageButton(leftPos + 4, topPos + 159, 71, 21, 0, 42, 22, BUTTON, (b) -> {
+        taskSwitch = new TouhouImageButton(leftPos + 4, topPos + 159, 71, 21, 0, 42, 22, BUTTON, (b) -> {
             taskListOpen = !taskListOpen;
             init();
         });
@@ -338,11 +332,11 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
     }
 
     private void addRideButton() {
-        ride = new StateSwitchingButton(leftPos + 51, topPos + 206, 20, 20, maid.isRideable()) {
+        ride = new TouhouStateSwitchButton(leftPos + 51, topPos + 206, 20, 20, maid.isRideable()) {
             @Override
             public void onClick(double mouseX, double mouseY) {
                 this.isStateTriggered = !this.isStateTriggered;
-                NetworkHandler.CHANNEL.sendToServer(new MaidConfigMessage(maid.getId(), maid.isHomeModeEnable(), maid.isPickup(), isStateTriggered, maid.getSchedule()));
+                PacketDistributor.sendToServer(new MaidConfigPackage(maid.getId(), maid.isHomeModeEnable(), maid.isPickup(), isStateTriggered, maid.getSchedule()));
             }
         };
         ride.initTextureValues(84, 0, 21, 21, BUTTON);
@@ -350,11 +344,11 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
     }
 
     private void addPickButton() {
-        pick = new StateSwitchingButton(leftPos + 30, topPos + 206, 20, 20, maid.isPickup()) {
+        pick = new TouhouStateSwitchButton(leftPos + 30, topPos + 206, 20, 20, maid.isPickup()) {
             @Override
             public void onClick(double mouseX, double mouseY) {
                 this.isStateTriggered = !this.isStateTriggered;
-                NetworkHandler.CHANNEL.sendToServer(new MaidConfigMessage(maid.getId(), maid.isHomeModeEnable(), isStateTriggered, maid.isRideable(), maid.getSchedule()));
+                PacketDistributor.sendToServer(new MaidConfigPackage(maid.getId(), maid.isHomeModeEnable(), isStateTriggered, maid.isRideable(), maid.getSchedule()));
             }
         };
         pick.initTextureValues(42, 0, 21, 21, BUTTON);
@@ -362,11 +356,11 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
     }
 
     private void addHomeButton() {
-        home = new StateSwitchingButton(leftPos + 9, topPos + 206, 20, 20, maid.isHomeModeEnable()) {
+        home = new TouhouStateSwitchButton(leftPos + 9, topPos + 206, 20, 20, maid.isHomeModeEnable()) {
             @Override
             public void onClick(double mouseX, double mouseY) {
                 this.isStateTriggered = !this.isStateTriggered;
-                NetworkHandler.CHANNEL.sendToServer(new MaidConfigMessage(maid.getId(), isStateTriggered, maid.isPickup(), maid.isRideable(), maid.getSchedule()));
+                PacketDistributor.sendToServer(new MaidConfigPackage(maid.getId(), isStateTriggered, maid.isPickup(), maid.isRideable(), maid.getSchedule()));
             }
         };
         home.initTextureValues(0, 0, 21, 21, BUTTON);
@@ -390,19 +384,19 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
         graphics.renderItem(task.getIcon(), leftPos + 6, topPos + 161);
         List<FormattedCharSequence> splitTexts = font.split(task.getName(), 42);
         if (!splitTexts.isEmpty()) {
-            graphics.drawString(font, splitTexts.get(0), leftPos + 28, topPos + 165, 0x333333, false);
+            graphics.drawString(font, splitTexts.getFirst(), leftPos + 28, topPos + 165, 0x333333, false);
         }
     }
 
     private void renderMaidInfo(GuiGraphics graphics, int mouseX, int mouseY) {
         if (info.isHovered()) {
             List<Component> list = Lists.newArrayList();
-            String prefix = "§a█\u0020";
+            String prefix = "§a█ ";
 
             MutableComponent title = Component.literal("")
                     .append(Component.translatable("tooltips.touhou_little_maid.info.title")
                             .withStyle(ChatFormatting.GOLD, ChatFormatting.UNDERLINE))
-                    .append(Component.literal("§r\u0020"));
+                    .append(Component.literal("§r "));
             if (maid.isStruckByLightning()) {
                 title.append(Component.literal("❀").withStyle(ChatFormatting.DARK_RED));
             }
@@ -414,25 +408,25 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
             if (maid.getOwner() != null) {
                 list.add(Component.literal(prefix).withStyle(ChatFormatting.WHITE)
                         .append(Component.translatable("tooltips.touhou_little_maid.info.owner")
-                                .append(":\u0020").withStyle(ChatFormatting.AQUA))
+                                .append(": ").withStyle(ChatFormatting.AQUA))
                         .append(maid.getOwner().getDisplayName()));
             }
             CustomPackLoader.MAID_MODELS.getInfo(maid.getModelId()).ifPresent((info) -> list.add(Component.literal(prefix)
                     .withStyle(ChatFormatting.WHITE)
                     .append(Component.translatable("tooltips.touhou_little_maid.info.model_name")
-                            .append(":\u0020").withStyle(ChatFormatting.AQUA))
+                            .append(": ").withStyle(ChatFormatting.AQUA))
                     .append(ParseI18n.parse(info.getName()))));
             list.add(Component.literal(prefix).withStyle(ChatFormatting.WHITE)
                     .append(Component.translatable("tooltips.touhou_little_maid.info.experience")
-                            .append(":\u0020").withStyle(ChatFormatting.AQUA))
+                            .append(": ").withStyle(ChatFormatting.AQUA))
                     .append(String.valueOf(maid.getExperience())));
             list.add(Component.literal(prefix).withStyle(ChatFormatting.WHITE)
                     .append(Component.translatable("tooltips.touhou_little_maid.info.favorability")
-                            .append(":\u0020").withStyle(ChatFormatting.AQUA))
+                            .append(": ").withStyle(ChatFormatting.AQUA))
                     .append(String.valueOf(maid.getFavorability())));
             list.add(Component.literal(prefix).withStyle(ChatFormatting.WHITE)
                     .append(Component.translatable("block.touhou_little_maid.gomoku")
-                            .append(":\u0020").withStyle(ChatFormatting.AQUA))
+                            .append(": ").withStyle(ChatFormatting.AQUA))
                     .append(Component.translatable("tooltips.touhou_little_maid.info.game_skill.gomoku", MaidGomokuAI.getMaidCount(maid), MaidGomokuAI.getRank(maid))));
 
             graphics.renderComponentTooltip(font, list, mouseX, mouseY);
@@ -455,11 +449,17 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
     }
 
     private void drawMaidCharacter(GuiGraphics graphics, int x, int y) {
-        double scale = getMinecraft().getWindow().getGuiScale();
-        RenderSystem.enableScissor((int) ((leftPos + 6) * scale), (int) ((topPos + 107 + 42) * scale),
-                (int) (67 * scale), (int) (95 * scale));
-        InventoryScreen.renderEntityInInventoryFollowsMouse(graphics, leftPos + 40, topPos + 100, 40, (leftPos + 40) - x, (topPos + 70 - 20) - y, maid);
-        RenderSystem.disableScissor();
+        InventoryScreen.renderEntityInInventoryFollowsMouse(
+                graphics,
+                leftPos + 6,
+                topPos + 12,
+                leftPos + 73,
+                topPos + 124,
+                40,
+                0.1F,
+                x,
+                y,
+                maid);
     }
 
     private void drawTaskListBg(GuiGraphics graphics) {
@@ -521,7 +521,7 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
     protected void containerTick() {
         counterTime += 1;
         if (counterTime % 20 == 0 && maid != null) {
-            NetworkHandler.CHANNEL.sendToServer(new RequestEffectMessage(maid.getId()));
+            PacketDistributor.sendToServer(new RequestEffectPackage(maid.getId()));
         }
     }
 
@@ -537,13 +537,13 @@ public abstract class AbstractMaidContainerGui<T extends AbstractMaidContainer> 
         return maid;
     }
 
-    private void renderTransTooltip(ImageButton button, GuiGraphics graphics, int x, int y, String key) {
+    private void renderTransTooltip(TouhouImageButton button, GuiGraphics graphics, int x, int y, String key) {
         if (button.isHovered()) {
             graphics.renderComponentTooltip(font, Collections.singletonList(Component.translatable(key)), x, y);
         }
     }
 
-    private void renderTransTooltip(StateSwitchingButton button, GuiGraphics graphics, int x, int y, String key) {
+    private void renderTransTooltip(TouhouStateSwitchButton button, GuiGraphics graphics, int x, int y, String key) {
         if (button.isHovered()) {
             graphics.renderComponentTooltip(font, Lists.newArrayList(
                     Component.translatable(key + "." + button.isStateTriggered()),
