@@ -18,7 +18,7 @@ import org.jetbrains.annotations.Nullable;
 import java.util.List;
 
 public class EmiAltarRecipe implements EmiRecipe {
-    private static final EmiTexture POWER_ICON = new EmiTexture(new ResourceLocation(TouhouLittleMaid.MOD_ID, "textures/entity/power_point.png"), 32, 0, 16, 16, 16, 16, 64, 64);
+    private static final EmiTexture POWER_ICON = new EmiTexture(ResourceLocation.fromNamespaceAndPath(TouhouLittleMaid.MOD_ID, "textures/entity/power_point.png"), 32, 0, 16, 16, 16, 16, 64, 64);
     private final ResourceLocation id;
     private final List<EmiStack> outputs;
     private final List<EmiIngredient> inputs;
@@ -80,7 +80,7 @@ public class EmiAltarRecipe implements EmiRecipe {
         widgets.addSlot(getInput(inputs, 3), 80, 15);
         widgets.addSlot(getInput(inputs, 4), 100, 35);
         widgets.addSlot(getInput(inputs, 5), 100, 55);
-        widgets.addSlot(outputs.get(0), 140, 5);
+        widgets.addSlot(outputs.getFirst(), 140, 5);
 
         widgets.addTexture(POWER_ICON, 72, 38);
         widgets.addText(Component.literal(result), (int) ((widgets.getWidth() - font.width(result)) / 2.0f), 85, darkGray, false);
